docs/api/qiskit/0.19/qiskit.providers.aer.extensions.SnapshotStabilizer.mdx
---
title: SnapshotStabilizer (v0.19)
description: API reference for qiskit.providers.aer.extensions.SnapshotStabilizer in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotStabilizer
---

# SnapshotStabilizer

<Class id="qiskit.providers.aer.extensions.SnapshotStabilizer" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot_stabilizer.py" signature="SnapshotStabilizer(label, num_qubits=0)" modifiers="class">
  Snapshot instruction for stabilizer method of Qasm simulator.

  Create a stabilizer state snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the instruction barrier size \[Default: 0].

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  **Additional Information:**

  This snapshot is always performed on all qubits in a circuit. The number of qubits parameter specifies the size of the instruction as a barrier and should be set to the number of qubits in the circuit.

  ## Attributes

  <span id="snapshotstabilizer-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStabilizer.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshotstabilizer-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStabilizer.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshotstabilizer-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStabilizer.label">
    Return snapshot label
  </Attribute>

  <span id="snapshotstabilizer-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStabilizer.params">
    return instruction params.
  </Attribute>

  <span id="snapshotstabilizer-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStabilizer.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshotstabilizer-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.add_decomposition" signature="SnapshotStabilizer.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshotstabilizer-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.assemble" signature="SnapshotStabilizer.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="snapshotstabilizer-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.broadcast_arguments" signature="SnapshotStabilizer.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshotstabilizer-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.c_if" signature="SnapshotStabilizer.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshotstabilizer-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.copy" signature="SnapshotStabilizer.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotstabilizer-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.define_snapshot_register" signature="SnapshotStabilizer.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshotstabilizer-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.inverse" signature="SnapshotStabilizer.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshotstabilizer-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.is_parameterized" signature="SnapshotStabilizer.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshotstabilizer-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.mirror" signature="SnapshotStabilizer.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotstabilizer-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.qasm" signature="SnapshotStabilizer.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshotstabilizer-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotStabilizer.repeat" signature="SnapshotStabilizer.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

